--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mybatis_plus?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=986920241
-
 #mybatis ??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+# Global logic delete Bean name
+#logic-delete-field=flag
+# logic deleted value
+logic-delete-value=1
+# logic not deleted value
+logic-not-delete-value=0
