--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mybatis_plus?serverTimezone=GMT%2B8
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mybatis_plus?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=986920241
 #mybatis ??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+# Logic delete feature config
 # Global logic delete Bean name
 #logic-delete-field=flag
 # logic deleted value
-logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-delete-value=1
 # logic not deleted value
-logic-not-delete-value=0
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
+# SQL execution time analysis config
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:h2:mem:test
