SQL 语句性能分析插件

--- a/src/main/resources/spy.properties
+++ b/src/main/resources/spy.properties
@@ -6,6 +6,6 @@ deregisterdrivers=true
 useprefix=true
 excludecategories=info,debug,result,commit,resultset
 dateformat=yyyy-MM-dd HH:mm:ss
-#driverlist=org.h2.Driver
+#driverlist=org.h2.Driver,com.p6spy.engine.spy.P6SpyDriver
 outagedetection=true
 outagedetectioninterval=2
