--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,6 @@ mybatis-plus.global-config.db-config.logic-delete-value=1
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
 # SQL execution time analysis config
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:h2:mem:test
+spring.datasource.url=jdbc:p6spy:mysql://127.0.0.1:3306/mybatis_plus?serverTimezone=GMT%2B8
+#spring.profiles.active= can be set to dev, test, prod
+spring.profiles.active=dev
