--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mybatis_plus?serverTimezone=GMT%2B8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mybatis_plus?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=986920241
 #mybatis ??
@@ -12,7 +12,7 @@ mybatis-plus.global-config.db-config.logic-delete-value=1
 # logic not deleted value
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
 # SQL execution time analysis config
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:mysql://127.0.0.1:3306/mybatis_plus?serverTimezone=GMT%2B8
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url=jdbc:p6spy:mysql://127.0.0.1:3306/mybatis_plus?serverTimezone=GMT%2B8
 #spring.profiles.active= can be set to dev, test, prod
 spring.profiles.active=dev
