--- a/service/service_vod/pom.xml
+++ b/service/service_vod/pom.xml
@@ -10,15 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service_edu</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-core</artifactId>
-            <version>3.4.3</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>service_vod</artifactId>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
