--- a/service/service_edu/pom.xml
+++ b/service/service_edu/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>OnlineVideoCourseSite</artifactId>
+        <artifactId>service</artifactId>
         <groupId>asia.dreamdropsakura</groupId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
@@ -12,12 +12,6 @@
 
     <artifactId>service_edu</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-core</artifactId>
-            <version>3.4.3</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <properties>
