--- a/service/service_edu/pom.xml
+++ b/service/service_edu/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>service</artifactId>
         <groupId>asia.dreamdropsakura</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <!-- <relativePath>../../pom.xml</relativePath> -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
