swagger 进行接口测试。用它有两个好处：1.生成在线接口文档。2.方便接口调试。 由于swagger 很多的模块都需要用，故将其整合到公共模块(common)中.项目中其他模块需要使用时，只需要在pom 文件中添加依赖就可以

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,6 +15,13 @@
     </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>asia.dreamdropsakura</groupId>
+            <artifactId>service_base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
         <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
