--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>service/service_vod</module>
         <module>common</module>
         <module>common/service_base</module>
+        <module>common/common_utils</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
