--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- Log4j core -->
+            <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.15.0</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
