--- a/common/service_base/pom.xml
+++ b/common/service_base/pom.xml
@@ -14,4 +14,12 @@
       -->
     <modelVersion>4.0.0</modelVersion>
     <artifactId>service_base</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>asia.dreamdropsakura</groupId>
+            <artifactId>common_utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
